samples/_failures_safe/1761315095_c31491_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_aaa7389e.c:190: error: expected ‘;’, ‘,’ or ‘)’ at end of input
